--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="undo_scnackbar_string">Challenge %s deleted!</string>
     <string name="reset_scnackbar_string">Challenge %s progress reset!</string>
 
-    <string name="last_rank_remaining_string">You successfully complete the challenge!\nCongratz!</string>
+    <string name="last_rank_remaining_string">You complete the challenge! Congratz!</string>
 
     <string name="timer_notification_channel_id" translatable="false">timer_channel</string>
     <string name="timer_notification_channel_name" translatable="true">Timer</string>
